--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,28 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Jaftem.github.io</title>
+  <title>Jeremy Aftem</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-91004067-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
+
 </head>
 <body>
   <div class="main-app">
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
   </div>
 </body>
 </html>
